# RBE550-project

./: README.md
devel/: .catkin  .rosinstall
devel/lib/pkgconfig/: project.pc  warehouse_simulation.pc  warehouse_simulation_toolkit.pc
devel/lib/project/: global_planner.py  key_control
devel/lib/warehouse_simulation/: key_control
devel/lib/warehouse_simulation_toolkit/: global_planner.py  key_control
devel/share/project/cmake/: projectConfig.cmake
devel/share/warehouse_simulation/cmake/: warehouse_simulationConfig.cmake
devel/share/warehouse_simulation_toolkit/cmake/: warehouse_simulation_toolkitConfig.cmake
install/: _setup_util.py  setup.sh
install/lib/pkgconfig/: warehouse_simulation.pc
install/share/warehouse_simulation/cmake/: warehouse_simulationConfig.cmake
install/share/warehouse_simulation/launch/: test.launch  warehouse_simulation.launch
install/share/warehouse_simulation/maps/: my_map.yaml
src/plugins/: CMakeLists.txt  simple_move.cpp
src/project/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
src/project/launch/: final.launch  global.launch  test.launch
src/project/maps/: my_map.pgm  my_map.yaml
src/project/param/: costmap_common.yaml  global_costmap.yaml  local_costmap.yaml  local_planner.yaml  move_base.yaml
src/project/rviz/: navigation.rviz
src/project/scripts/: a_star.py  global_planner.py  path_follower.py
src/project/urdf/: pioneer3dx.xacro  pioneer3dx_body.xacro  pioneer3dx_wheel.xacro
src/project/worlds/: warehouse.world
